--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Paigong</string>
+    <string name="mine">我的</string>
+    <string name="history_order">历史订单</string>
+    <string name="handling">进行中</string>
+    <string name="order_task">订单任务</string>
+    <string name="handled">已处理</string>
+    <string name="pending">待处理</string>
+    <string name="sign">签 到</string>
 </resources>
