--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="handled">已处理</string>
     <string name="pending">待处理</string>
     <string name="sign">签 到</string>
+    <string name="imei_number">IMEI号：</string>
+    <string name="satellite">卫星</string>
+    <string name="map">地图</string>
 </resources>
