--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="imei_number">IMEI号：</string>
     <string name="satellite">卫星</string>
     <string name="map">地图</string>
+    <string name="start">开始</string>
 </resources>
