实现登陆页布局

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,10 @@
     <string name="engineer">工程师</string>
     <string name="choice">请选择</string>
     <string name="cancel">取消</string>
+    <string name="enter_account">请输入账号</string>
+    <string name="enter_password">请输入密码</string>
+    <string name="login">登录</string>
+    <string name="login_message">汽车金融数据经济构筑者</string>
 
     <array name="picker_month">
         <item>01 月</item>
