--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,9 @@
     <string name="is_return_order">退单？</string>
     <string name="contact">现场联系人</string>
     <string name="remarks">备注</string>
+    <string name="ge">个</string>
+    <string name="ge_middle">个，无线</string>
+    <string name="wire">有线</string>
 
     <array name="picker_month">
         <item>01 月</item>
