--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,9 @@
     <string name="tip">提示</string>
     <string name="choice_map">请选择地图</string>
     <string name="next_step">下一步</string>
+    <string name="frame_no">车架号</string>
+    <string name="pending_no">派单数量</string>
+    <string name="complete_no">完成数量</string>
 
     <array name="picker_month">
         <item>01 月</item>
