--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="car_type">车型</string>
     <string name="place">安装位置</string>
     <string name="connection_pic">接线图</string>
+    <string name="flush">刷新</string>
 
     <array name="picker_month">
         <item>01 月</item>
