开始安装的三个Adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,13 +51,19 @@
     <string name="choice_map">请选择地图</string>
     <string name="next_step">下一步</string>
     <string name="frame_no">车架号</string>
+    <string name="frame_no_">车架号：</string>
     <string name="pending_no">派单数量</string>
     <string name="complete_no">完成数量</string>
     <string name="car_no">车牌号</string>
+    <string name="car_no_">车牌号：</string>
     <string name="car_type">车型</string>
     <string name="place">安装位置</string>
     <string name="connection_pic">接线图</string>
     <string name="flush">刷新</string>
+    <string name="remove_no">拆除数量</string>
+    <string name="device_type">设备类型</string>
+    <string name="device_name">设备名称</string>
+    <string name="device_name_">设备名称：</string>
 
     <array name="picker_month">
         <item>01 月</item>
