--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="device_type">设备类型</string>
     <string name="device_name">设备名称</string>
     <string name="device_name_">设备名称：</string>
+    <string name="save">保存</string>
 
     <array name="picker_month">
         <item>01 月</item>
