--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="order_task">订单任务</string>
     <string name="handled">已处理</string>
     <string name="pending">待处理</string>
+    <string name="pend">派单</string>
     <string name="sign">签到</string>
     <string name="imei_number">IMEI号：</string>
     <string name="satellite">卫星</string>
