--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,13 @@
     <string name="pending_audit">待审核</string>
     <string name="audit_fault">审核未通过</string>
 
+
+    <string name="tip_pic">提示:请上传照片！</string>
+    <string name="tip_imei">提示:请输入6位以上设备号！</string>
+    <string name="tip_locate">提示:未查看定位未成功！</string>
+    <string name="tip_explain">提示:请输入故障说明</string>
+    <string name="tip_position">提示:请输入安装位置</string>
+
     <array name="picker_month">
         <item>01 月</item>
         <item>02 月</item>
