--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,7 +88,7 @@
     <string name="tip_imei">提示:请输入6位以上设备号！</string>
     <string name="tip_locate">提示:未查看设备定位！</string>
     <string name="tip_explain">提示:请输入故障说明</string>
-    <string name="tip_position">提示:安装位置不为能空！</string>
+    <string name="tip_position">提示:安装位置不能为空！</string>
     <string name="tip_carno">提示:请输入车牌号！</string>
     <string name="tip_car_type">提示:请输入车型！</string>
     <string name="tip_carno_fault">提示:请输入正确的车牌号！</string>
