--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,8 @@
 
     <string name="msg_search_null">没有查询到符合搜索条件的订单~</string>
 
+    <string name="msg_not_perfect">卡片内容填写不完整，请完善后再提交！</string>
+
     <array name="picker_month">
         <item>01 月</item>
         <item>02 月</item>
