--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
 
     <string name="msg_not_perfect">卡片内容填写不完整，请完善后再提交！</string>
     <string name="order_canceled">订单已被取消！</string>
+    <string name="contact_worker">联系安装师傅</string>
 
     <array name="picker_month">
         <item>01 月</item>
