--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="old_install_pic">旧接线图</string>
     <string name="install_worker">安装人：</string>
     <string name="fault_describe">故障描述</string>
+    <string name="repair_suggest">维修建议</string>
     <string name="install_place">安装位置</string>
     <string name="enter_install_place">请输入安装位置</string>
     <string name="install_pic">接线图</string>
